update blurbs to most current, make sure that modals dont stretch beyond window on mobile, clean up sponsor links

--- a/source/assets/stylesheets/modules/_modal.sass
+++ b/source/assets/stylesheets/modules/_modal.sass
@@ -20,6 +20,7 @@ $pf: '.m-modal'
   overflow: scroll
   text-align: center
   background-color: $color-white
+  max-height: 100%
 
   a
     margin-bottom: 2rem
